<resources>
    <string name="app_name">CMask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">login page</string>
    <string name="title">C-MASK</string>
    <string name="mask">mask</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">sign up</string>
    <string name="icon_user">icon user</string>
    <string name="cancel">Cancel</string>
    <string name="icon_envelope">icon envelope</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="shape">shape</string>
    <string name="see_here">See Here</string>
    <string name="see_the">See the latest spread statistics</string>
    <string name="hi_name">Hi, %s</string>
    <string name="feel">How do you feel today?</string>
    <string name="wear_mask">How to wear mask properly?</string>
    <string name="statistic">statistics</string>
    <string name="recent">Recent</string>
    <string name="all_photos">All Photos</string>
    <string name="button">button</string>
    <string name="name_user">Alex Hartley</string>
    <string name="recent_photos">Recent Photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="email_user">alex99@yopmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="number_user">Enter your phone number</string>
    <string name="about_us">About us</string>
    <string name="name_about">Name</string>
    <string name="name_path">Path</string>
    <string name="right_result">right result</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="date1">Date</string>
    <string name="date2">Date</string>
    <string name="keterangan">Keterangan: %s</string>
    <string name="akurasi">Akurasi: %d</string>
    <string name="insert_your_password_here">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="time_stamp">%1s %2s</string>
    <string name="see_detail">See Detail</string>
    <string name="you_don_t_have_any_recent_photo">You do not have any recent photo</string>
</resources>