<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_home"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewHomeHeaderBackground" />

        <ImageView
            android:id="@+id/imageViewHomeHeaderBackground"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:contentDescription="@string/shape"
            android:src="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewHomeHeaderThreeQuarterCircleBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="324dp"
            android:layout_marginBottom="640dp"
            android:contentDescription="@string/shape"
            android:src="@drawable/circular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonAboutUs"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/ic_baseline_info_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHomeHeaderThreeQuarterCircleBackground"
            app:layout_constraintEnd_toEndOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintTop_toTopOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/textViewHomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:fontFamily="@font/robotobold"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787" />

        <TextView
            android:id="@+id/textViewHomeUserGreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/feel"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomeUser"
            app:layout_constraintVertical_bias="0.205" />

        <TextView
            android:id="@+id/textViewCovidChart"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotobold"
            android:text="Indonesia Covid Chart"
            android:textColor="@color/blue_splash"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab_next" />

        <ImageView
            android:id="@+id/square"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:background="@drawable/full_rectangle"
            android:contentDescription="@string/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHomeHeaderBackground"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/txt_howDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:text="@string/wear_mask"
            android:textColor="@color/blue_splash"
            app:layout_constraintBottom_toBottomOf="@+id/square"
            app:layout_constraintEnd_toEndOf="@+id/square"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="@+id/square"
            app:layout_constraintTop_toTopOf="@+id/square"
            app:layout_constraintVertical_bias="0.344" />

        <ImageView
            android:layout_width="151dp"
            android:layout_height="169dp"
            android:layout_marginTop="134dp"
            android:contentDescription="@string/shape"
            android:src="@drawable/person"
            app:layout_constraintEnd_toEndOf="@+id/square"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/square"
            app:layout_constraintTop_toTopOf="@+id/imageViewHomeHeaderBackground" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:contentDescription="@string/button"
            android:focusable="true"
            android:src="@drawable/ic_next"
            app:backgroundTint="@color/blue_splash"
            app:borderWidth="0dp"
            app:layout_constraintEnd_toEndOf="@+id/square"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="@+id/square"
            app:layout_constraintTop_toTopOf="@+id/square"
            app:tint="@android:color/white" />

        <ImageView
            android:id="@+id/square_2"
            android:layout_width="360dp"
            android:layout_height="210dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/full_rectangle"
            android:contentDescription="@string/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCovidChart" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/square_2"
            app:layout_constraintEnd_toEndOf="@+id/square_2"
            app:layout_constraintStart_toStartOf="@+id/square_2"
            app:layout_constraintTop_toBottomOf="@+id/textViewCovidChart" />

        <TextView
            android:id="@+id/txt_allPhotos"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/all_photos"
            android:textColor="@color/blue_splash"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/square_2" />

        <TextView
            android:id="@+id/textViewSeeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/see_detail"
            android:textColor="@color/blue_splash"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/square_2" />

        <LinearLayout
            android:id="@+id/linearLayoutAnnoncement"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_allPhotos">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="You Don't Have Any History Data"
                    android:textColor="@color/blue_splash"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotobold"
                    android:text="Please Use Camera Feature"
                    android:textColor="@color/blue_splash"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_allPhotos"
            tools:listitem="@layout/item_row" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>